still trying to sum the streams

--- a/notebooks/MLC_Partner_Project.ipynb
+++ b/notebooks/MLC_Partner_Project.ipynb
@@ -1101,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "61448d21",
+   "id": "54a3529f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "dfe28bad",
+   "id": "832f3c6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "de89de30",
+   "id": "04bc481f",
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1157,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "65ce0b9a",
+   "id": "d8aa2710",
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c54598a1",
+   "id": "3757a515",
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e67445c8",
+   "id": "af9290c9",
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1236,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "130206ad",
+   "id": "92f264bd",
    "metadata": {},
    "outputs": [
     {
@@ -1258,31 +1258,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "4e95613c",
+   "execution_count": 50,
+   "id": "46b89446",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlc_df['Streams']=mlc_df['Streams'].str.replace(',','')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "adb2973f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlc_df['Streams']=mlc_df['Streams'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "4e8b955f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dsp_by_stream = dsp_and_label.groupby(['DSP'])['Streams'].sum().reset_index(name='num_streams').sort_values(by='num_streams', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "a5f9cb10",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/4_/948td82x7jlf4pz0c4dtqn_00000gn/T/ipykernel_40337/4233776142.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dsp_and_label['total_streams'] = dsp_and_label.loc[:,'total_streams'].sum()\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DSP</th>\n",
+       "      <th>num_streams</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Smithsonian</td>\n",
+       "      <td>9   6   9   9   9   6   12   12   9   12   1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>NugsNet</td>\n",
+       "      <td>82   229   17   531   531   25   65   35   1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>SoundCloud</td>\n",
+       "      <td>8,597   261,280   13,996   2,127   2,127   2...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Spotify</td>\n",
+       "      <td>8,133   28,419   28,419   14,118   107,079  ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>PowerMusic</td>\n",
+       "      <td>8   8   8   324   2,790   8   4   4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Amazon</td>\n",
+       "      <td>7,842   1,841   13,385   993   1,059   631  ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Apple</td>\n",
+       "      <td>5,839   44,239   19,336   18,709   91,394   ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Trebel</td>\n",
+       "      <td>5   25   138   157   9   5   201   14   12  ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Pacemaker</td>\n",
+       "      <td>423   875   409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Qoboz</td>\n",
+       "      <td>4   3   3   3   3   3   3   3   3   3   3   ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            DSP                                        num_streams\n",
+       "19  Smithsonian    9   6   9   9   9   6   12   12   9   12   1...\n",
+       "13      NugsNet    82   229   17   531   531   25   65   35   1...\n",
+       "21   SoundCloud    8,597   261,280   13,996   2,127   2,127   2...\n",
+       "22      Spotify    8,133   28,419   28,419   14,118   107,079  ...\n",
+       "16   PowerMusic               8   8   8   324   2,790   8   4   4 \n",
+       "0        Amazon    7,842   1,841   13,385   993   1,059   631  ...\n",
+       "2         Apple    5,839   44,239   19,336   18,709   91,394   ...\n",
+       "24       Trebel    5   25   138   157   9   5   201   14   12  ...\n",
+       "14    Pacemaker                                   423   875   409 \n",
+       "17        Qoboz    4   3   3   3   3   3   3   3   3   3   3   ..."
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dsp_and_label['total_streams'] = dsp_and_label.loc[:,'total_streams'].sum()\n"
+    "dsp_by_stream.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "868995b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dsp_by_stream = dsp_and_label.groupby(['DSP'])['Streams'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "fe0107af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DSP\n",
+       "Amazon                  7,842   1,841   13,385   993   1,059   631  ...\n",
+       "Anghami                 278   451   1,252   385   328   38   60   54...\n",
+       "Apple                   5,839   44,239   19,336   18,709   91,394   ...\n",
+       "AudioMack               10,175   62,105   1,088   10,704   1,416   8...\n",
+       "Classical Archives                                              12   8 \n",
+       "Deezer                  2   2   2   2   2   1,414   1,032   1,303   ...\n",
+       "Fan Label                                            24   24   19   24 \n",
+       "GTL                     1   1   1   1   1   1   1   1   526   1   2,...\n",
+       "LiveXLive               2   310   321   37   6   10   149   505   38...\n",
+       "Melodyv                 13,065   3,216   328   40,707   6,639   2,96...\n",
+       "Name: Streams, dtype: object"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dsp_by_stream.head(10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa1e7a77",
+   "id": "fcac92c1",
    "metadata": {},
    "outputs": [],
    "source": []
