Updated with markdown block outlining two paths forward for deriving list of DSPs in order to create for loop.

--- a/notebook/mlc_dsp.ipynb
+++ b/notebook/mlc_dsp.ipynb
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "49c0dc1b",
+   "id": "fa86c5ea",
    "metadata": {},
    "outputs": [
     {
@@ -716,6 +716,14 @@
    ],
    "source": [
     "pd.DataFrame(mlc['DSP'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "392f20b5",
+   "metadata": {},
+   "source": [
+    "Need to either reset the index on the df OR use orginal df based on the DSP column and then run a unique to avoid repeats. That will create the list that can then be used for the for loop."
    ]
   },
   {
@@ -1233,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "b75d70d6",
+   "id": "d1bb4acd",
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "9c8a0a07",
+   "id": "3fcdfb5c",
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1402,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "27c63d26",
+   "id": "5a1b70f9",
    "metadata": {},
    "outputs": [
     {
@@ -2638,7 +2646,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "6ea68fa3",
+   "id": "9b49c202",
    "metadata": {
     "scrolled": true
    },
@@ -2664,7 +2672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3723d9b",
+   "id": "476ff84a",
    "metadata": {},
    "source": [
     "## Statistical insights"
@@ -2673,7 +2681,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "9cae4acb",
+   "id": "b0305682",
    "metadata": {},
    "outputs": [
     {
@@ -2983,7 +2991,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3b03abb",
+   "id": "52f7d93f",
    "metadata": {},
    "outputs": [],
    "source": []
